toolchain/internal/core/analysis/testdata/errors/duplicates/enum_pattern_same_name.vdl
// @expect: E805
// Enum and pattern share the same name

enum Status {
	Active
	Inactive
}

pattern Status = "status.{code}"
